--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,20 @@
 
     <string name="action_settings">Settings</string>
 
-    <!--左侧NavigationDrawer中的菜单项-->
+    <!--１/左侧NavigationDrawer中的菜单项-->
+    <!--功能模块-->
+    <string name="drawer_group_function">功能</string>
     <string name="bluetooth_connected">连接设备</string>
+    <!--选项模块-->
+    <string name="drawer_group_options">选项</string>
+    <string name="shareApp">推荐App给好友</string>
     <string name="preference_setting">设置</string>
+
+    <!--2/设置界面菜单项-->
+    <string name="setting_normal">常规</string>
+    <string name="setting_cache">开启软件时自动打开蓝牙</string>
+    <string name="setting_other">其它</string>
+    <string name="setting_suggestion">意见反馈</string>
+
+
 </resources>
